added menu bar at top

--- a/yahooproject/app/assets/stylesheets/news.scss
+++ b/yahooproject/app/assets/stylesheets/news.scss
@@ -48,3 +48,9 @@ table {
 	border-spacing: 0;
 }
 // The block above this comment removes browser styling DO NOT REMOVE
+
+// nav,  {
+//   background-color: blue;
+//   height: 50px;
+//   color: white;
+// }
