--- a/yahooproject/app/views/news/index.html.erb
+++ b/yahooproject/app/views/news/index.html.erb
@@ -9,7 +9,13 @@
 
     <header>
 
-      <span>
+      <form class="navbar-form navbar-left">
+        <a href="#" class="navbar-link">
+          <div class="profile-pic">
+            round image
+          </div>
+          </form>
+        </a>
         <div class="background-image">
           Yahoo!
         </div>
@@ -22,7 +28,7 @@
         <div class="profile-pic">
           round image
         </div>
-      </span> <!-- closes top horizontal menu section of header -->
+      </form> <!-- closes top horizontal menu section of header -->
 
       <div class="slider-image">
         slider
