--- a/yahooproject/app/assets/stylesheets/news.scss
+++ b/yahooproject/app/assets/stylesheets/news.scss
@@ -49,10 +49,20 @@ table {
 }
 // The block above this comment removes browser styling DO NOT REMOVE
 
+#purplebar1 {
+  background-color: #743A86;
+}
+
+#yahoologo{
+	width: 6em;
+}
+
+
 div#topmenu {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	color: #fff;
 }
 
 input.form-control {
@@ -74,11 +84,6 @@ a.box2 {
 
 form.navbar-form {
 	margin-right: auto;
-}
-
-a#yahoologo {
-	margin-left: 15px;
-	margin-right: 20px;
 }
 
 div#slider-section{
@@ -131,20 +136,39 @@ p, #featuredstoryparagraph {
 	margin-left: 0px;
 }
 
+#purplebar2 {
+	background-color: #743A86;
+}
+
+button.btn-default {
+  color: #743A86 !important;
+  background-color: #814D92 !important;
+  border-color: #743A86;
+	}
+
 .container#secondmenudiv {
+	color: #fff;
 	display: flex;
   justify-content: center;
 	align-items: center;
 }
 
 #secondnavbar {
+	justify-content: flex-start;
 	display: flex;
+	flex-grow: 1;
 	align-items: center;
 	margin-left: 90px;
 	margin-bottom: 0px !important;
 }
 
 #secondmenubox1 {
+	display: flex;
+	flex-grow: 1;
+}
+
+#secondmenubox2 {
+	display: flex;
 	flex-grow: 2;
 }
 
@@ -156,17 +180,31 @@ p, #featuredstoryparagraph {
 }
 
 #secondmenubox3 {
-		flex-grow: 1;
-		margin-left: 170px;
+	justify-content: flex-start;
+	display: flex;
+	flex-grow: 1;
 }
 
 #weather {
 	font-size: 10px;
-
+	position: relative;
+	top: 50%;
+	transform: translateY(+35%);
 }
 
-span, #dropdownstock {
+#temperature {
+	margin-left: 8px;
+	font-size: 25px;
+	position: relative;
+	top: 50%;
+	transform: translateY(16%);
+}
+
+button#dropdownstock {
 	margin-left: 10px;
+	position: relative;
+	top: 50%;
+	transform: translateY(-26%);
 }
 
 #midsection {
@@ -215,6 +253,10 @@ span, #dropdownstock {
 	margin-right: 73px;
 }
 
+#featuredstorybottom h1 {
+	margin-top: 40px;
+}
+
 #linktofullarticlebottom {
   margin-left: 0px;
 }
@@ -222,5 +264,10 @@ span, #dropdownstock {
 #featuredstoryparagraphbottom {
 	font-size: 14px !important;
   margin: auto 0;
+	margin-top: 20px;
+}
 
+button.btn.btn-default{
+	margin-top: 15px;
+	border-radius: 0 !important;
 }
