--- a/yahooproject/app/assets/stylesheets/news.scss
+++ b/yahooproject/app/assets/stylesheets/news.scss
@@ -50,7 +50,7 @@ table {
 // The block above this comment removes browser styling DO NOT REMOVE
 
 #purplebar1 {
-  background-color: #743A86;
+  background-color: #6f2886;
 }
 
 #yahoologo{
@@ -92,12 +92,23 @@ div#slider-section{
 	justify-content: center;
 }
 
-a#slider-image {
-	text-align: center;
-	display: flex;
-	flex-direction: column;
-	height: 300px;
+#backgroundimage {
+	color: #5C5C5C;
+	height: 344px;
+	background: url("/assets/now-you-see-me-jesse-eisenberg-image.jpg");
+	background-repeat: no-repeat;
+	width: 100%;
+	padding: 0px;
+	background-position: 10% 38%;
+	background-size: cover;
 }
+
+// a#slider-image {
+// 	text-align: center;
+// 	display: flex;
+// 	flex-direction: column;
+// 	height: 300px;
+// }
 
 span.vertical-menu {
 	margin-left: 80px;
@@ -120,7 +131,6 @@ span.vertical-menu {
 
 .col-md-5 {
 	margin-left: auto;
-	margin-right: 73px;
 }
 
 h1, #title {
@@ -137,13 +147,13 @@ p, #featuredstoryparagraph {
 }
 
 #purplebar2 {
-	background-color: #743A86;
+	background-color: #6f2886;
 }
 
 button.btn-default {
-  color: #743A86 !important;
-  background-color: #814D92 !important;
-  border-color: #743A86;
+  color: #752b8c !important;
+  background-color: #893da1 !important;
+  border-color: #6f2886;
 	}
 
 .container#secondmenudiv {
@@ -158,7 +168,7 @@ button.btn-default {
 	display: flex;
 	flex-grow: 1;
 	align-items: center;
-	margin-left: 90px;
+	margin-left: 105px;
 	margin-bottom: 0px !important;
 }
 
@@ -176,7 +186,7 @@ button.btn-default {
 	font-size: 12px !important;
 	flex-grow: 1;
 	float: left;
-	padding-right: 20px;
+	padding-right: 30px;
 }
 
 #secondmenubox3 {
@@ -208,18 +218,21 @@ button#dropdownstock {
 }
 
 #midsection {
+	width: 100%;
 	display: flex;
-
+	float: left;
+	height: 200px;
 }
 
 #centerbox1 {
 	text-align: center;
-	flex-grow: 2;
+	flex-grow: 3;
 	margin: auto 0;
 }
 
 #centerbox2 {
 	flex-grow: 1;
+	margin-top: 30px;
 }
 
 #centerbox2 ul {
@@ -248,9 +261,25 @@ button#dropdownstock {
 	justify-content: center;
 }
 
+#bottombackgroundlength {
+	background-color: #ffffcf;
+	height: 320px;
+}
+
+#bottombox1 {
+	display: flex;
+	flex-grow: 1;
+}
+
+#bottombox2 {
+	display: flex;
+	flex-grow: 1;
+}
+
 #featuredstorybottom {
+	color: #6f2886;
 	margin-left: auto;
-	margin-right: 73px;
+	margin-top: 40px;
 }
 
 #featuredstorybottom h1 {
@@ -259,12 +288,19 @@ button#dropdownstock {
 
 #linktofullarticlebottom {
   margin-left: 0px;
+	font-style: italic;
 }
 
 #featuredstoryparagraphbottom {
 	font-size: 14px !important;
   margin: auto 0;
 	margin-top: 20px;
+}
+
+#learnmorebutton {
+	color: #fff !important;
+    background-color: #9b4fb1 !important;
+    border-color: #9b4fb1 !important;
 }
 
 button.btn.btn-default{
