--- a/yahooproject/app/assets/stylesheets/news.scss
+++ b/yahooproject/app/assets/stylesheets/news.scss
@@ -86,6 +86,13 @@ form.navbar-form {
 	margin-right: auto;
 }
 
+#circletopmenu {
+	border-color: white;
+	border-radius: 50%;
+	width: 10px;
+	height: 10px;
+}
+
 div#slider-section{
 	display: flex;
 	align-items: center;
@@ -94,7 +101,7 @@ div#slider-section{
 
 #backgroundimage {
 	color: #5C5C5C;
-	height: 344px;
+	height: 507px;
 	background: url("/assets/now-you-see-me-jesse-eisenberg-image.jpg");
 	background-repeat: no-repeat;
 	width: 100%;
@@ -119,14 +126,25 @@ span.vertical-menu {
 	background-color: lightgray;
  	flex-direction: column;
 	text-align: center;
+
 }
 
 #verticalmenulist ul {
-	margin: auto 0;
+	align-items: center;
 }
 
 #verticalmenulist ul li i {
+	font-size: 20px;
 	margin-top: 7px;
+	padding: 7px;
+}
+
+#first {
+	padding-top: 13px;
+}
+
+#last {
+	padding-bottom: 18px;
 }
 
 .col-md-5 {
@@ -136,6 +154,8 @@ span.vertical-menu {
 h1, #title {
 	font-size: 24px !important;
 }
+
+
 
 p, #featuredstoryparagraph {
 	font-size: 14px !important;
@@ -226,13 +246,14 @@ button#dropdownstock {
 
 #centerbox1 {
 	text-align: center;
-	flex-grow: 3;
+	flex-grow: 5;
 	margin: auto 0;
 }
 
 #centerbox2 {
 	flex-grow: 1;
 	margin-top: 30px;
+	margin-right: 320px;
 }
 
 #centerbox2 ul {
@@ -263,7 +284,7 @@ button#dropdownstock {
 
 #bottombackgroundlength {
 	background-color: #ffffcf;
-	height: 320px;
+	height: 354px;
 }
 
 #bottombox1 {
