--- a/yahooproject/app/assets/stylesheets/news.scss
+++ b/yahooproject/app/assets/stylesheets/news.scss
@@ -215,26 +215,18 @@ button.btn-default {
 	flex-grow: 1;
 }
 
-#weather {
-	font-size: 10px;
-	position: relative;
-	top: 50%;
-	transform: translateY(+35%);
+#location_and_weather {
+	display: flex;
+	align-items: center;
 }
 
 #temperature {
-	margin-left: 8px;
 	font-size: 25px;
-	position: relative;
-	top: 50%;
-	transform: translateY(16%);
+	margin-left: 15px;
 }
 
 button#dropdownstock {
-	margin-left: 10px;
-	position: relative;
-	top: 50%;
-	transform: translateY(-26%);
+margin-top: 0px !important;
 }
 
 #midsection {
