--- a/yahooproject/app/views/movie_reviews/index.html.erb
+++ b/yahooproject/app/views/movie_reviews/index.html.erb
@@ -32,6 +32,14 @@
 
 <br>
 
-<%= link_to 'New Movie review', new_movie_review_path %>
+<ul class="col-md-2">
+  <% @movie_title.each do |title| %>
+    <li><%= title %></li>
+    <% end %>
+</ul>
 
-<%= @parsed %>
+<ul class="col-md-5">
+  <% @headline.each do |headline| %>
+    <li><%= headline %></li>
+    <% end %>
+</ul>
